--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -7,9 +7,24 @@
             <div style="width:100%;" class="text-body2">
                 <MRow NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.SpaceBetween">
                     <div class="text-h6">@_appDetail.Name</div>
-                    <MButton Icon>
-                        <MIcon Color="black">mdi-dots-horizontal</MIcon>
-                    </MButton>
+
+                    <MMenu OffsetY>
+                        <ActivatorContent>
+                            <MButton Icon @attributes="@context.Attrs">
+                                <MIcon Color="black">mdi-dots-horizontal</MIcon>
+                            </MButton>
+                        </ActivatorContent>
+                        <ChildContent>
+                            <MList>
+                                <MListItem OnClick="ShowCloneModalAsync">
+                                    <MIcon Size="20" Class="mr-4">fas fa-clone</MIcon>
+                                    <MListItemContent>
+                                        <MListItemTitle>克隆配置</MListItemTitle>
+                                    </MListItemContent>
+                                </MListItem>
+                            </MList>
+                        </ChildContent>
+                    </MMenu>
                 </MRow>
                 <MRow NoGutters Class="text-caption">
                     @_appDetail.Identity
@@ -670,7 +685,7 @@
     </div>
 </SheetDialog>
 
-<SheetDialog Value="true" Title="@T("Clone config object")" Icon="mdi-circle" IconColor="success">
+<SheetDialog @bind-Value="_showCloneModal" Title="@T("Clone config object")" Icon="mdi-circle" IconColor="success">
     <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px;">
         <MStepper Value="_step" Elevation=0 Class="full-height">
             <MStepperHeader Style="box-shadow:none !important">
@@ -685,7 +700,7 @@
             <MStepperItems Style="height: calc(100% - 72px);">
                 <MStepperContent Class="full-height" Style="padding:0 !important;" Step="1">
                     <div class="full-height d-flex flex-column justify-center align-center pt-12">
-                        <div>克隆 “项目”-“App”-“环境”-“集群”的所有配置至</div>
+                        <div>克隆 “@_projectDetail.Name”-“@_appDetail.Name”-“@_selectCluster.EnvironmentName”-“@_selectCluster.ClusterName”的所有配置至</div>
                         <div class="d-flex justify-end mt-12 full-width">
                             <MRow NoGutters>
                                 <MCol>
@@ -699,24 +714,28 @@
                                         <FadeTransition>
                                             <ShowTransitionElement Value="_cloneAppSelect" Class="full-width px-6 mb-15">
                                                 <div class="mt-6" @onclick:stopPropagation>
-                                                    <MSelect @bind-Value="_addConfigObjectModal.Data.FormatLabelCode"
-                                                             Label="格式"
+                                                    <MSelect Value="_cloneSelectProjectId"
+                                                             ValueChanged="projectId=>ProjectValueChangedAsync(projectId)"
+                                                             Label="项目"
                                                              MenuProps="props => props.OffsetY = true"
                                                              Outlined
                                                              Dense
-                                                             Items="_configObjectFormats"
+                                                             TItem="ProjectModel"
+                                                             TItemValue="int"
+                                                             TValue="int"
+                                                             Items="_allProjects"
                                                              ItemText="l=>l.Name"
-                                                             ItemValue="l=>l.Code">
+                                                             ItemValue="l=>l.Id">
                                                     </MSelect>
-                                                    <MSelect @bind-Value="_addConfigObjectModal.Data.FormatLabelCode"
-                                                             Label="格式"
+                                                    <MSelect @bind-Value="_cloneSelectAppId"
+                                                             Label="应用"
                                                              MenuProps="props => props.OffsetY = true"
                                                              Outlined
                                                              Dense
                                                              HideDetails="true"
-                                                             Items="_configObjectFormats"
+                                                             Items="_cloneApps"
                                                              ItemText="l=>l.Name"
-                                                             ItemValue="l=>l.Code">
+                                                             ItemValue="l=>l.Id">
                                                     </MSelect>
                                                 </div>
                                             </ShowTransitionElement>
@@ -736,14 +755,14 @@
                             </MRow>
                         </div>
                         <div class="d-flex justify-end align-end full-height" style="width:100%;">
-                            <MButton Width="100" Class="rounded-pill" Color="primary" OnClick="CloneNextClick">下一步</MButton>
+                            <MButton Disabled="@(!_cloneAppSelect && !_cloneEnvSelect || (_cloneAppSelect && _cloneSelectAppId==0))" Width="100" Class="rounded-pill" Color="primary" OnClick="CloneNextClick">下一步</MButton>
                         </div>
                     </div>
                 </MStepperContent>
                 <MStepperContent Class="full-height" Step="2">
-                    <div style="overflow-y: auto; height: calc(100% - 48px);">
+                    <div style="overflow-y: auto; height: calc(100% - @(_isNeedRebase ? "80px" :"48px"));">
                         <p style="font-size:14px; font-weight:700; color:#1B2559">需要克隆的集群</p>
-                        <MChipGroup Multiple Column @bind-Values="_selectEnvClusterIds">
+                        <MChipGroup Multiple Column Values="_selectEnvClusterIds" ValuesChanged="CloneEnvClusterValueChanged">
                             @foreach (var item in _appDetail.EnvironmentClusters)
                             {
                                 <MChip Value="item.Id" Large Class="envClusterChip mr-6 mb-6" Filter Outlined ActiveClass="@($"{item.EnvironmentColor}")">
@@ -761,16 +780,25 @@
                         <MExpansionPanels Flat Accordion>
                             @foreach (var configObject in _configObjects)
                             {
+                                if (configObject.IsNeedRebase)
+                                {
+                                    _isNeedRebase = configObject.IsNeedRebase;
+                                }
                                 var formatLabelCode = configObject.FormatLabelCode.Trim().ToLower();
                                 if (formatLabelCode == "properties")
                                 {
                                     <MExpansionPanel Style="margin-bottom: 12px;">
                                         <MExpansionPanelHeader Style="padding-left: 0 !important;" Context="_">
                                             <div class="d-flex align-center">
-                                                <div class="d-flex align-center" @onclick:stopPropagation>
+                                                <div class="d-flex align-center">
+                                                    @if (configObject.IsNeedRebase)
+                                                    {
+                                                        <MIcon Class="mr-4" Color="warning">mdi-alert-outline</MIcon>
+                                                    }
                                                     <MCheckbox @bind-Value="configObject.IsChecked"
+                                                       OnPrependClick="()=>CloneConfigObjectCheckBoxClick(configObject)"
                                                        HideDetails="true"
-                                                       Style="margin: 0 !important; padding: 0 !important;"
+                                                       Style="margin: 0 8px 0 0 !important; padding: 0 !important;"
                                                        Color="primary"></MCheckbox>
                                                     <MTextField HideDetails="true" Dense Style="max-width: 270px;" Label="名称" Outlined @bind-Value="configObject.Name"></MTextField>
                                                 </div>
@@ -788,10 +816,15 @@
                                     <MExpansionPanel Style="margin-bottom: 12px;">
                                         <MExpansionPanelHeader Style="padding-left: 0 !important;" Context="_">
                                             <div class="d-flex align-center">
-                                                <div class="d-flex align-center" @onclick:stopPropagation>
+                                                <div class="d-flex align-center">
+                                                    @if (configObject.IsNeedRebase)
+                                                    {
+                                                        <MIcon Class="mr-4" Color="warning">mdi-alert-outline</MIcon>
+                                                    }
                                                     <MCheckbox @bind-Value="configObject.IsChecked"
+                                                       OnClick="()=>CloneConfigObjectCheckBoxClick(configObject)"
                                                        HideDetails="true"
-                                                       Style="margin: 0 !important; padding: 0 !important;"
+                                                       Style="margin: 0 8px 0 0 !important; padding: 0 !important;"
                                                        Color="primary"></MCheckbox>
                                                     <MTextField HideDetails="true" Dense Style="max-width: 270px;" Label="名称" Outlined @bind-Value="configObject.Name"></MTextField>
                                                 </div>
@@ -806,10 +839,22 @@
                                 }
                             }
                         </MExpansionPanels>
-                        <div style="position: absolute; bottom: 0; right: 0;">
-                            <MButton Outlined Width="100" Class="rounded-pill mr-6" Color="primary" OnClick="ClonePrevClick">上一步</MButton>
-                            <MButton Width="100" Class="rounded-pill" Color="primary" OnClick="CloneNextClick">克隆</MButton>
-                        </div>
+                        @if (_isNeedRebase)
+                        {
+                            <div style="width: calc(100% - 48px); position: absolute; bottom: 0;">
+                                <MAlert Prominent
+                                    Type="AlertTypes.Warning">
+                                    配置对象名称冲突，配置对象名称相同将会覆盖配置信息，如需克隆请修改配置对象名称。
+                                </MAlert>
+                            </div>
+                        }
+                        else
+                        {
+                            <div style="position: absolute; bottom: 0; right: 0;">
+                                <MButton Outlined Width="100" Class="rounded-pill mr-6" Color="primary" OnClick="ClonePrevClick">上一步</MButton>
+                                <MButton Width="100" Class="rounded-pill" Color="primary" OnClick="CloneNextClick">克隆</MButton>
+                            </div>
+                        }
                     </div>
                 </MStepperContent>
             </MStepperItems>
@@ -832,10 +877,10 @@
     }
 
     List<Item> items = new()
-    {
-        new Item("Foo", "1"),
-        new Item("Bar", "2"),
-        new Item("Fizz", "3"),
-        new Item("Buzz", "4"),
-    };
+        {
+            new Item("Foo", "1"),
+            new Item("Bar", "2"),
+            new Item("Fizz", "3"),
+            new Item("Buzz", "4"),
+        };
 }
