--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -16,7 +16,7 @@
                         </ActivatorContent>
                         <ChildContent>
                             <MList>
-                                <MListItem OnClick="ShowCloneModalAsync">
+                                <MListItem OnClick="()=>ShowCloneModalAsync()">
                                     <MIcon Color="#323D6F" Size="20" Class="mr-4">mdi-content-copy</MIcon>
                                     <MListItemContent>
                                         <MListItemTitle>克隆配置</MListItemTitle>
@@ -117,7 +117,7 @@
                                                 <MIcon Color="success">mdi-check</MIcon>
                                             }
                                         </MButton>
-                                        <MButton StopPropagation Icon Class="mr-4"><MIcon Size="18" Color="#323D6F">fas fa-clone</MIcon></MButton>
+                                        <MButton StopPropagation Icon Class="mr-4" OnClick="()=>ShowCloneModalAsync(configObject)"><MIcon Size="18" Color="#323D6F">fas fa-clone</MIcon></MButton>
                                         <MButton StopPropagation Icon Class="mr-4" OnClick="()=>ShowReleaseModalAsync(configObject)"><MIcon Color="#323D6F">mdi-send</MIcon></MButton>
 
                                         <MMenu OffsetY>
@@ -180,7 +180,7 @@
                                         <sapn class="ml-2 text-caption">@configObject.FormatLabelCode</sapn>
                                         <MSpacer></MSpacer>
                                         <MButton StopPropagation Icon Class="mr-4" OnClick="()=>ShowPropertyModal(configObject,configObject.ConfigObjectPropertyContents)"><MIcon Color="#323D6F">mdi-plus-circle</MIcon></MButton>
-                                        <MButton StopPropagation Icon Class="mr-4"><MIcon Size="18" Color="#323D6F">fas fa-clone</MIcon></MButton>
+                                        <MButton StopPropagation Icon Class="mr-4" OnClick="()=>ShowCloneModalAsync(configObject)"><MIcon Size="18" Color="#323D6F">fas fa-clone</MIcon></MButton>
                                         <MButton StopPropagation Icon Class="mr-4" OnClick="()=>ShowReleaseModalAsync(configObject)"><MIcon Color="#323D6F">mdi-send</MIcon></MButton>
                                         <MMenu OffsetY>
                                             <ActivatorContent>
@@ -685,7 +685,7 @@
     </div>
 </SheetDialog>
 
-<SheetDialog @bind-Value="_showCloneModal" Title="@T("Clone config object")" Icon="mdi-circle" IconColor="success">
+<SheetDialog Value="_showCloneModal" ValueChanged="CloneDialogValueChangedAsync" Title="@T("Clone config object")" Icon="mdi-circle" IconColor="success">
     <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px;">
         <MStepper Value="_step" Elevation=0 Class="full-height">
             <MStepperHeader Style="box-shadow:none !important">
@@ -700,7 +700,13 @@
             <MStepperItems Style="height: calc(100% - 72px);">
                 <MStepperContent Class="full-height" Style="padding:0 !important;" Step="1">
                     <div class="full-height d-flex flex-column justify-center align-center pt-12">
-                        <div>克隆 “@_projectDetail.Name”-“@_appDetail.Name”-“@_selectCluster.EnvironmentName”-“@_selectCluster.ClusterName”的所有配置至</div>
+                        <div style="color: #A3AED0;">
+                            克隆&nbsp;
+                            <span style="font-size: 20px; font-weight: bold; color: #323D6F;">
+                                “@_projectDetail.Name”-“@_appDetail.Name”-“<span class="@($"{_selectCluster.EnvironmentColor}--text")">@_selectCluster.EnvironmentName</span>”-“@_selectCluster.ClusterName”
+                            </span>
+                            &nbsp;的所有配置至
+                        </div>
                         <div class="d-flex justify-end mt-12 full-width">
                             <MRow NoGutters>
                                 <MCol>
@@ -760,10 +766,10 @@
                     </div>
                 </MStepperContent>
                 <MStepperContent Class="full-height" Step="2">
-                    <div style="overflow-y: auto; height: calc(100% - @(_isNeedRebase ? "80px" :"48px"));">
+                    <div style="overflow-y: auto; height: calc(100% - @(IsNeedRebase ? "80px" :"48px"));">
                         <p style="font-size:14px; font-weight:700; color:#1B2559">需要克隆的集群</p>
                         <MChipGroup Multiple Column Values="_selectEnvClusterIds" ValuesChanged="CloneEnvClusterValueChanged">
-                            @foreach (var item in _appDetail.EnvironmentClusters)
+                            @foreach (var item in _cloneSelectApp.EnvironmentClusters)
                             {
                                 <MChip Value="item.Id" Large Class="envClusterChip mr-6 mb-6" Filter Outlined ActiveClass="@($"{item.EnvironmentColor}")">
                                     <div class="@($"{item.EnvironmentColor}--text")">@item.EnvironmentName</div>&nbsp;&nbsp;
@@ -772,14 +778,14 @@
                             }
                         </MChipGroup>
                         <p style="font-size:14px; font-weight:700; color:#1B2559">配置对象</p>
-                        <MCheckbox Value="_cloneConfigObjectAllChecked"
-                                   ValueChanged="CloneConfigObjectAllChecked"
+                        <MCheckbox Value="CloneConfigObjectAllChecked"
+                                   ValueChanged="CloneConfigObjectAllCheckedChanged"
                                    HideDetails="true"
                                    Label="@(_cloneConfigObjectAllChecked ? "取消全选" : "全选")"
                                    Color="primary"></MCheckbox>
                         <MExpansionPanels Flat Accordion>
                             @foreach (var configObject in _configObjects)
-                            {                                
+                            {
                                 var formatLabelCode = configObject.FormatLabelCode.Trim().ToLower();
                                 if (formatLabelCode == "properties")
                                 {
@@ -796,7 +802,14 @@
                                                        HideDetails="true"
                                                        Style="margin: 0 8px 0 0 !important; padding: 0 !important;"
                                                        Color="primary"></MCheckbox>
-                                                    <MTextField HideDetails="true" Dense Style="max-width: 270px;" Label="名称" Outlined @bind-Value="configObject.Name"></MTextField>
+                                                    <MTextField HideDetails="true"
+                                                        Dense
+                                                        Style="max-width: 270px;"
+                                                        Label="名称"
+                                                        Outlined
+                                                        Value="configObject.Name"
+                                                        TValue="string"
+                                                        ValueChanged="value=>CloneConfigObjectNameChanged(configObject,value)"></MTextField>
                                                 </div>
                                                 <span class="ml-3 text-caption">|</span>
                                                 <sapn class="ml-2 text-caption">properties</sapn>
@@ -822,7 +835,14 @@
                                                        HideDetails="true"
                                                        Style="margin: 0 8px 0 0 !important; padding: 0 !important;"
                                                        Color="primary"></MCheckbox>
-                                                    <MTextField HideDetails="true" Dense Style="max-width: 270px;" Label="名称" Outlined @bind-Value="configObject.Name"></MTextField>
+                                                    <MTextField HideDetails="true"
+                                                        Dense
+                                                        Style="max-width: 270px;"
+                                                        Label="名称"
+                                                        Outlined
+                                                        Value="configObject.Name"
+                                                        TValue="string"
+                                                        ValueChanged="value=>CloneConfigObjectNameChanged(configObject,value)"></MTextField>
                                                 </div>
                                                 <span class="ml-3 text-caption">|</span>
                                                 <sapn class="ml-2 text-caption">@configObject.FormatName</sapn>
@@ -835,7 +855,7 @@
                                 }
                             }
                         </MExpansionPanels>
-                        @if (_isNeedRebase)
+                        @if (IsNeedRebase)
                         {
                             <div style="width: calc(100% - 48px); position: absolute; bottom: 0;">
                                 <MAlert Prominent
@@ -848,7 +868,7 @@
                         {
                             <div style="position: absolute; bottom: 0; right: 0;">
                                 <MButton Outlined Width="100" Class="rounded-pill mr-6" Color="primary" OnClick="ClonePrevClick">上一步</MButton>
-                                <MButton Width="100" Class="rounded-pill" Color="primary" OnClick="CloneNextClick">克隆</MButton>
+                                <MButton Width="100" Class="rounded-pill" Color="primary" OnClick="CloneAsync">克隆</MButton>
                             </div>
                         }
                     </div>
