--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Relation.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Relation.razor
@@ -19,8 +19,37 @@
                 }
             </MChipGroup>
             <p class="neutral--text mt-12" style="font-size:14px; font-weight:700;">选择公共配置对象</p>
-            <MTextField Label="名称" Value="@("")"></MTextField>
-            
+            <div style="border-radius: 8px; border: 1px solid #E2E7F4; padding:12px 24px;">
+                <MRow Style="color: #A3AED0; font-size: 14px;" NoGutters>
+                    <span class="d-flex justify-center" style="width: 5%">状态</span>
+                    <span style="width: 47.5%">Key</span>
+                    <span style="width: 47.5%">Value</span>
+                </MRow>
+                <MDivider Class="mt-3 mx-n6"></MDivider>
+                @if (_configObject.FormatLabelCode.Trim().ToLower() == "properties")
+                {
+                    @foreach (var item in _configObject.ConfigObjectPropertyContents)
+                    {
+                        <MRow Class="pt-4" NoGutters Justify="JustifyTypes.SpaceBetween">
+                            @if(_configObject.ConfigObjectPropertyContents.)
+                            {
+
+                            }
+                            else
+                            {
+                            
+                            }
+                            <MIcon Class="hover-pointer">mdi-link-variant</MIcon>
+                            <div>@item.Key</div>
+                            <MTextField Dense HideDetails="true" Outlined @bind-Value="item.Value" Label="Value"></MTextField>
+                        </MRow>
+                    }
+                }
+                else
+                {
+                    <MTextarea Dense Outlined @bind-Value="_configObject.Content"></MTextarea>
+                }
+            </div>
         </div>
         <div class="d-flex justify-end align-end" style="width:100%; height:100%;">
             <MButton Class="rounded-pill" Color="primary" Width="100" OnClick="()=>{}">提交</MButton>
